Create custom layout for shopping list page to learn layout basics

--- a/Pages/ShoppingList.razor
+++ b/Pages/ShoppingList.razor
@@ -1,4 +1,5 @@
 ﻿@page "/shoppinglist"
+@layout LearnBlazorShoppingList.CustomLayouts.ShoppingListLayout;
 @using LearnBlazorShoppingList.Data;
 
 <PageTitle>@title</PageTitle>
